zetasql/parser/testdata/alter_user.test
alter user root;
--
ERROR: Syntax error: Unexpected ";" [at 1:16]
alter user root;
               ^
==

alter user root set options (password='abc');
--
AlterUserStatement [0-44]
  PathExpression [11-15]
    Identifier(root) [11-15]
  AlterActionList [16-44]
    SetOptionsOperation [16-44]
      OptionsList [28-44]
        OptionsEntry [29-43]
          Identifier(password) [29-37]
          StringLiteral('abc') [38-43]
--
ALTER USER root SET OPTIONS(password = 'abc')
==

alter user if exists root set options (password='abc');
--
AlterUserStatement(is_if_exists) [0-54]
  PathExpression [21-25]
    Identifier(root) [21-25]
  AlterActionList [26-54]
    SetOptionsOperation [26-54]
      OptionsList [38-54]
        OptionsEntry [39-53]
          Identifier(password) [39-47]
          StringLiteral('abc') [48-53]
--
ALTER USER IF EXISTS root SET OPTIONS(password = 'abc')
==
